feature: model selection

--- a/config.json.example
+++ b/config.json.example
@@ -3,5 +3,6 @@
 	"proxy": "",
 	"output_path": "",
 	"safety_settings": "false",
-	"debug_mode": "false"
+	"debug_mode": "false",
+	"default_model": "1.5-flash"
 }
